k3s-manifest/miniflux/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    name: miniflux
