k3s-manifest/miniflux/miniflux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: miniflux.syslabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              number: 8080
